<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.limbo</groupId>
    <artifactId>doorkeeper</artifactId>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>doorkeeper-server</module>
        <module>doorkeeper-api</module>
        <module>doorkeeper-eureka</module>
        <module>doorkeeper-admin</module>
    </modules>

    <packaging>pom</packaging>
    <description>DoorKeeper</description>

    <properties>
        <!-- SpringBoot 与 Spring 版本之间要适配 -->
        <spring.boot.version>2.1.3.RELEASE</spring.boot.version>
        <spring.version>5.1.5.RELEASE</spring.version>
        <spring.cloud.version>Greenwich.SR5</spring.cloud.version>
        <mysql.driver.version>5.1.34</mysql.driver.version>
        <hikari.version>2.7.8</hikari.version>
        <mybatis.plus.verison>3.3.1</mybatis.plus.verison>
        <commons.beanutils.version>1.9.3</commons.beanutils.version>
        <commons.collections4.version>4.1</commons.collections4.version>
        <commons.io.version>2.6</commons.io.version>
        <jackson.version>2.10.3</jackson.version>
        <jasypt.version>1.16</jasypt.version>
        <dubbo.version>2.7.3</dubbo.version>
        <slf4j.version>1.7.25</slf4j.version>
        <swagger3.version>2.1.5</swagger3.version>
        <springdoc.version>1.5.0</springdoc.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>utf-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>